# clustering-compare

./: .gitignore  README.md  pyproject.toml
src/clustering/: __init__.py  dim_reducer.py  supervised.py  train_data.py  unsupervised.py
src/clustering/abstract/: clustering.py
src/constants/: general.py
src/train_data_img/: __init__.py  train_data_gen.py
